Make number of priorities dynamic

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Priorities</string>
-    <string name="title_activity_read_priorities">Ruthless Priorities</string>
+    <string name="app_name_long">Ruthless Priorities</string>
 </resources>
